[package]
name = "encodings"
version = "0.0.0"
authors = ["kilpatty <seanpkilgarriff@gmail.com>"]
edition = "2018"
license = "MIT"
description = "A crate containing common encoding styles"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
